Fixed nav collapse double click bug, added smooth animation on nav collapse

--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,7 @@ body [class*="col-"] {
 
     #navigation-wrapper .menu-list {
         margin-top: 60px;
+        transition: 0.5s ease all;
     }
 
     #sidebar {
